# gsazure2

./: Cargo.toml  DEPLOYMENT.md  Dioxus.toml  Dockerfile  bucket-policy.json  deploy.sh  index.html.bak  package-lock.json  package.json  tailwind.config.js.backup
.github/workflows/: deploy.yml
assets/: tailwind.css
src/: logging.rs  main.rs
src/components/: mod.rs
src/pages/: about.rs  blog.rs  mod.rs  projects.rs
